Preventing ABN number as clickable on mobile.

--- a/css/custom.css
+++ b/css/custom.css
@@ -294,7 +294,7 @@ a.btn-link:hover {
 	text-decoration: none;
 }
 
-.footer-details a.abn-num  {
+.footer-details p.abn-num a  {
 	pointer-events: none;
 }
 
